--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="logo-nav">
             <span class="logo"><a href=""> <span class="web">Web</span>Studio</a> </span>
             <ul class="nav">
-                <li class="link"><a class="active" href="./index.html">Студия</a></li>
+                <li class="link active"><a href="./index.html">Студия</a></li>
                 <li class="link"><a href="./portfolio.html">Портфолио</a></li>
                 <li class="link"><a href="">Контакты</a></li>
             </ul> 
