--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
             <span class="logo"><a href=""> <span class="web">Web</span>Studio</a> </span>
             <ul class="nav">
                 <li class="link"><a href="./index.html">Студия</a></li>
-                <li class="link"><a class="active" href="./portfolio.html">Портфолио</a></li>
+                <li class="link active"><a href="./portfolio.html">Портфолио</a></li>
                 <li class="link"><a href="">Контакты</a></li>
             </ul> 
         </nav>
@@ -58,11 +58,14 @@
                     <a href=""> 
                         <div class="card-tumb"> 
                             <img src="images/tehnokrjak.jpg" alt="Технокряк"> 
+                            <div class="project-overlay">
                             <p class="task"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                            </p>
+                            </p></div>
                         </div>
+                        <div class="project-title">
                     <h2 class="title">Технокряк</h2>
-                    <p class="task">Веб-сайт</p> 
+                    <p class="task">Веб-сайт</p>
+                </div> 
                     </a>
                 
                 </li>
@@ -76,8 +79,9 @@
                             </p>
                 </div>
                     </div> 
+                    <div class="project-title">
                     <h2 class="title"> Постер New Orlean vs Golden Star</h2>
-                    <p class="task">Дизайн</p>
+                    <p class="task">Дизайн</p></div>
                 </a>
                 </li>
 
@@ -91,8 +95,9 @@
                             </p>
                         </div>
                     </div>
+                    <div class="project-title">
                     <h2 class="title">Ресторан Seafood</h2>
-                    <p class="task">Приложение</p></a>
+                    <p class="task">Приложение</p></div></a>
                 </li>
 
 
@@ -100,11 +105,13 @@
                     <a href="">
                         <div class="card-tumb"> 
                         <img src="images/prime.jpg" alt="Маркетинг">
+                        <div class="project-overlay">
                         <p class="task"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                        </p>
+                        </p></div>
                     </div>
+                    <div class="project-title">
                     <h2 class="title">Проект Prime</h2>
-                    <p class="task">Маркетинг</p></a>
+                    <p class="task">Маркетинг</p></div></a>
                 </li>
                 <li class="project-item">
                     <a href="">
@@ -114,29 +121,34 @@
                         <p class="task"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                         </p></div>
                     </div>
+                    <div class="project-title">
                         <h2 class="title">Проект Boxes</h2>
-                    <p class="task">Приложение</p></a>
+                    <p class="task">Приложение</p></div></a>
                 </li>
                 <li class="project-item">
                     <a href="">
                         <div class="card-tumb"> 
                             <img src="images/inspiration.jpg" alt="Веб-сайт">
+                            <div class="project-overlay">
                         <p class="task"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                        </p>
+                        </p></div>
                     </div>
+                    <div class="project-title">
                     <h2 class="title">Inspiration has no Borders</h2>
-                    <p class="task">Дизайн</p> </a>
+                    <p class="task">Дизайн</p> </div></a>
                 </li>
 
                 <li class="project-item">
                     <a href="">
                         <div class="card-tumb"> 
                             <img src="images/editionjpg.jpg" alt="Дизайн">
+                            <div class="project-overlay">
                         <p class="task"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                        </p>
+                        </p></div>
                     </div>
+                    <div class="project-title">
                     <h2 class="title">Издание Limited Edition</h2>
-                    <p class="task">Дизайн</p></a>    
+                    <p class="task">Дизайн</p></div></a>    
                 </li>
 
 
@@ -144,22 +156,26 @@
                     <a href="">
                         <div class="card-tumb"> 
                             <img src="images/lab.jpg" alt="Маркетинг">
+                            <div class="project-overlay">
                         <p class="task"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                        </p>
+                        </p></div>
                     </div>
+                    <div class="project-title">
                     <h2 class="title">Проект LAB</h2>
-                    <p class="task">Маркетинг</p></a>
+                    <p class="task">Маркетинг</p></div></a>
                 </li>
 
                 <li class="project-item">
                     <a href="">
                         <div class="card-tumb"> 
                             <img src="images/growing.jpg" alt="Приложение">
+                            <div class="project-overlay">
                         <p class="task"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                        </p>
+                        </p></div>
                     </div>
+                    <div class="project-title">
                     <h2 class="title">Growing Business</h2>
-                    <p class="task">Приложение</p></a>
+                    <p class="task">Приложение</p></div></a>
                 </li>
             </ul>
             </div>
