--- a/index.html
+++ b/index.html
@@ -412,8 +412,7 @@
 
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-<p></p>
-<button class="icon-close" data-modal-close> 
+<button data-modal-close> 
     <img src="images/icons.svg/close-black.svg" width="18px" height="18px">
 </button> 
 </div>
